# coral-django-boilerplate

./: .editorconfig  README.md  pyproject.toml
.github/workflows/: ci.yml
project_name/: apps.py
tests/: settings.py  wsgi.py
